[project]
name = "distance_transforms"
version = "0.1.0"
description = "Python bindings for the Julia DistanceTransforms.jl package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "juliacall>=0.9.24",
    "numpy>=2.2.3",
    "torch>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"